# lvgl-board-templates

./: .gitignore  README.md
Elecrow/CrowPanel 2.4 PIO/: platformio.ini
Elecrow/CrowPanel 2.4 PIO/include/: LovyanGFX_Driver.h  pins_config.h  touch.h
Elecrow/CrowPanel 2.4 PIO/lib/: lv_conf.h
Elecrow/CrowPanel 2.4 PIO/lib/ui/: images.c  images.h  screens.c
Elecrow/CrowPanel 2.4 PIO/src/: main.cpp
M5Stack/CardPuter PIO/: README.md  platformio.ini
M5Stack/CardPuter PIO/include/: lv_conf.h  lvgl_setup.h
M5Stack/CardPuter PIO/src/: main.cpp
VieweDisplay/PIO VieweDisplay 1.5 Inch Knob/: README.md  platformio.ini
VieweDisplay/PIO VieweDisplay 1.5 Inch Knob/src/: main.cpp
VieweDisplay/PIO VieweDisplay 2.1 Inch Knob/: README.md  partitions.csv  platformio.ini
VieweDisplay/PIO VieweDisplay 2.1 Inch Knob/include/: ESP_Panel_Board_Supported.h  esp_panel_board_supported_conf.h
VieweDisplay/PIO VieweDisplay 2.1 Inch Knob/src/: Rotary.cpp  Rotary.h  UserButton.cpp  UserButton.h  main.cpp
VieweDisplay/PIO VieweDisplay 2.1 Inch Knob/tools/: esp_idf_size  extra_path.py
WaveShare/PIO WS-3.49/: partitions.csv  platformio.ini
WaveShare/PIO WS-3.49/boards/: waveshare-esp32-s3-touch-amoled-1-8.json
WaveShare/PIO WS-3.49/include/: user_config.h
WaveShare/PIO WS-3.49/src/: main.cpp
WaveShare/PIO WS-4.3/: platformio.ini
WaveShare/PIO WS-4.3/boards/: WAVESHARE-ESP-LCD.json
WaveShare/PIO WS-4.3/lib/: lv_conf.h
WaveShare/PIO WS-4.3/src/: main.cpp
WaveShare/WS_147_ESP/: CMakeLists.txt  sdkconfig.defaults
WaveShare/WS_147_ESP/main/: CMakeLists.txt  main.c
(+37 files in other folders)
